# chirality-framework

./: .env.example  .gitignore  AGENTS.md  AGENT_CHIRALITY_FRAMEWORK.md  ARCHITECTURE.md  CF_v10-piping-engineer.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_SOLUTION.md  GEMINI.md  LICENSE  MANIFEST.in  Makefile  QUICK_DEPLOY.md  README.md  RELEASE_ISSUE_ANALYSIS.md  RELEASE_NOTES.md  RESPONSES_API_MIGRATION_COMPLETE.md  RESPONSES_API_VIOLATIONS_FIXED.md  ROADMAP.md  SEQUENCE_ANALYSIS.md  SUPPORT_MATRICES_INTEGRATION.md  TROUBLESHOOTING.md  VERSION.md  WHY_CHIRALITY.md  mypy.ini  problem.json  pyproject.toml  pytest.ini  requirements.txt  test_adapter_kwargs_inspection.py  test_adapter_self_policing.py  test_clean_transcript.py  test_core_violations_fixed.py  test_d2_adapter_contract.py  test_d2_guards.py  test_d2_preflight_parity.py  test_d2_schema_validation.py  (+7 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
_Archive/: CHIRALITY_FRAMEWORK_REVISED copy 10.md  CHIRALITY_FRAMEWORK_REVISED copy 12.md  CHIRALITY_FRAMEWORK_REVISED copy 13.md  CHIRALITY_FRAMEWORK_REVISED copy 2.md  CHIRALITY_FRAMEWORK_REVISED copy 3.md  CHIRALITY_FRAMEWORK_REVISED copy 5.md  CHIRALITY_FRAMEWORK_REVISED copy.md  CHIRALITY_FRAMEWORK_REVISED.md  CHIRALITY_FRAMEWORK_REVISED_INTERPRETATION_v1.md  CHIRALITY_FRAMEWORK_REVISED_INTERPRETATION_v2.md  CHIRALITY_FRAMEWORK_REVISED_INTERPRETATION_v5_unlensed.md  CHIRALITY_FRAMEWORK_v6_B.md  CHIRALITY_FRAMEWORK_v7_A.md  CHIRALITY_FRAMEWORK_v7_B.md  CHIRALITY_FRAMEWORK_v8_A.md  CHIRALITY_FRAMEWORK_v9_A.md  Comparison.md  Matrix_A_B copy.md  Matrix_A_B.md  NORMATIVE_CF_v10-template.md
chirality/: __init__.py  cli.py  normative_implementation_chirality-framework_Phase1.txt  normative_implementation_chirality-framework_v18.0.0.txt  normative_spec.txt
docs/: AD_COPY.md  ALGORITHM.md  API_REFERENCE.md  CHIRALITY_FRAMEWORK.md  CHIRALITY_FRAMEWORK_REVISED_INTERPRETATION_v5.md  CHIRALITY_FRAMEWORK_REVISED_INTERPRETATION_v5_unlensed.md  INTERFACE.md  NEO4J_QUERIES.md  NEO4J_SEMANTIC_INTEGRATION.md  PHILOSOPHY.md  PROMPT_ENGINEERING.md  PYPI_DEPLOYMENT.md  SALES_PITCHES.md  STRATEGIC_ANALYSIS.md  THREE_STAGE_PIPELINE.md  TUTORIAL.md  WHY_CHIRALITY.md
runs/: ChatGPT_U_7.md  Claude_U_7.md  Untitled 6.txt
scripts/: auto_release.py  check_kernel_hash.py  check_version_sync.py  codemod_legacy_imports.py  create_release.py  fix_latest_release.py  guard_no_legacy.py  guard_responses_api.py  lint_boundaries.py  lint_prompt_assets.py  move_manifest.csv  reconcile_assets.py  rewrite_imports.py  simple_import_fix.py  update_checksums.py  (+1 more)
(+286 files in other folders)
